[package]
name = "p_kr"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
crossterm = "0.27.0"
tui = { package = "ratatui", version = "0.23.0" }
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
rs_poker = "1.0.0"
